src/main/CSlang/parser/.antlr/CSlangParser.py
# Generated from d:/y4_hk1/ppl/assignment2-initial/assignment2-initial/src/main/CSlang/parser/CSlang.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CSlangParser ( Parser ):

    grammarFileName = "CSlang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'null'", "'self'", "'contructor'", "'if'", 
                     "'else'", "'for'", "'continue'", "'break'", "'return'", 
                     "'void'", "'func'", "'new'", "'const'", "'var'", "'class'", 
                     "'{'", "'}'", "';'", "':'", "'<-'", "'='", "','", "'int'", 
                     "'float'", "'@'", "')'", "'('", "'['", "']'", "'^'", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'&&'", 
                     "'||'", "'+'", "'-'", "'*'", "'/'", "'!'", "<INVALID>", 
                     "'%'", "'bool'", "'.'", "'string'", "':='", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "NULL", "SELF", "CONTRUCTOR", "IF", "ELSE", 
                      "FOR", "CONTINUE", "BREAK", "RETURN", "VOID", "FUNCTION", 
                      "NEW", "CONST", "VAR", "CLASS", "LCB", "RCB", "SEMI", 
                      "COLON", "RARROW", "EQUAL", "COMMA", "INT", "FLOAT", 
                      "SIGN", "RB", "LB", "LSB", "RSB", "STRING_OP", "EQ_OP", 
                      "NEQ_OP", "LT_OP", "GT_OP", "LEQ_OP", "GEQ_OP", "AND_OP", 
                      "OR_OP", "ADD_OP", "SUB_OP", "MUL_OP", "F_DIV_OP", 
                      "NOT_OP", "I_DIV_OP", "REM_OP", "BOOL", "DOT", "STRING", 
                      "ASSGIN_OP", "INTLIT", "FLOATLIT", "BOOLLIT", "TRUE", 
                      "FALSE", "DIM", "STRINGLIT", "WS", "C_COMMENT", "CPP_COMMENT", 
                      "ID", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_classdecl = 1
    RULE_classbody = 2
    RULE_var_decl = 3
    RULE_short_form = 4
    RULE_short_identifier_list = 5
    RULE_full_form = 6
    RULE_identifier_list = 7
    RULE_expression_list = 8
    RULE_expr = 9
    RULE_expr0 = 10
    RULE_expr1 = 11
    RULE_expr2 = 12
    RULE_expr3 = 13
    RULE_expr4 = 14
    RULE_expr5 = 15
    RULE_expr6 = 16
    RULE_expr7 = 17
    RULE_expr8 = 18
    RULE_expr9 = 19
    RULE_expr10 = 20
    RULE_expr11 = 21
    RULE_array_idx = 22
    RULE_index_expression = 23
    RULE_operands = 24
    RULE_subexpression = 25
    RULE_compare_ops = 26
    RULE_whole_type = 27
    RULE_core_type = 28
    RULE_id_type = 29
    RULE_at_id = 30
    RULE_function_call = 31
    RULE_function_call_params = 32
    RULE_function_call_param_list = 33
    RULE_arr_type = 34
    RULE_class_create = 35
    RULE_funct_declare = 36
    RULE_funct_prototype = 37
    RULE_params = 38
    RULE_parameter_list = 39
    RULE_parameter_declare = 40
    RULE_funct_body = 41
    RULE_funct_return_type = 42
    RULE_continue_statement = 43
    RULE_break_statement = 44
    RULE_return_statement = 45
    RULE_block_statement = 46
    RULE_stateVinhs = 47
    RULE_stateVinh = 48
    RULE_assignment_statement = 49
    RULE_assignment_content = 50
    RULE_lhs = 51
    RULE_assign_expressions = 52
    RULE_if_statement = 53
    RULE_pre_state = 54
    RULE_bool_expression = 55
    RULE_true_statements = 56
    RULE_else_expression = 57
    RULE_for_statement = 58
    RULE_for_body = 59
    RULE_method_access = 60
    RULE_instance_access = 61
    RULE_static_access = 62
    RULE_instance_method_access = 63
    RULE_static_method_access = 64

    ruleNames =  [ "program", "classdecl", "classbody", "var_decl", "short_form", 
                   "short_identifier_list", "full_form", "identifier_list", 
                   "expression_list", "expr", "expr0", "expr1", "expr2", 
                   "expr3", "expr4", "expr5", "expr6", "expr7", "expr8", 
                   "expr9", "expr10", "expr11", "array_idx", "index_expression", 
                   "operands", "subexpression", "compare_ops", "whole_type", 
                   "core_type", "id_type", "at_id", "function_call", "function_call_params", 
                   "function_call_param_list", "arr_type", "class_create", 
                   "funct_declare", "funct_prototype", "params", "parameter_list", 
                   "parameter_declare", "funct_body", "funct_return_type", 
                   "continue_statement", "break_statement", "return_statement", 
                   "block_statement", "stateVinhs", "stateVinh", "assignment_statement", 
                   "assignment_content", "lhs", "assign_expressions", "if_statement", 
                   "pre_state", "bool_expression", "true_statements", "else_expression", 
                   "for_statement", "for_body", "method_access", "instance_access", 
                   "static_access", "instance_method_access", "static_method_access" ]

    EOF = Token.EOF
    NULL=1
    SELF=2
    CONTRUCTOR=3
    IF=4
    ELSE=5
    FOR=6
    CONTINUE=7
    BREAK=8
    RETURN=9
    VOID=10
    FUNCTION=11
    NEW=12
    CONST=13
    VAR=14
    CLASS=15
    LCB=16
    RCB=17
    SEMI=18
    COLON=19
    RARROW=20
    EQUAL=21
    COMMA=22
    INT=23
    FLOAT=24
    SIGN=25
    RB=26
    LB=27
    LSB=28
    RSB=29
    STRING_OP=30
    EQ_OP=31
    NEQ_OP=32
    LT_OP=33
    GT_OP=34
    LEQ_OP=35
    GEQ_OP=36
    AND_OP=37
    OR_OP=38
    ADD_OP=39
    SUB_OP=40
    MUL_OP=41
    F_DIV_OP=42
    NOT_OP=43
    I_DIV_OP=44
    REM_OP=45
    BOOL=46
    DOT=47
    STRING=48
    ASSGIN_OP=49
    INTLIT=50
    FLOATLIT=51
    BOOLLIT=52
    TRUE=53
    FALSE=54
    DIM=55
    STRINGLIT=56
    WS=57
    C_COMMENT=58
    CPP_COMMENT=59
    ID=60
    UNCLOSE_STRING=61
    ILLEGAL_ESCAPE=62
    ERROR_CHAR=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CSlangParser.EOF, 0)

        def classdecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSlangParser.ClassdeclContext)
            else:
                return self.getTypedRuleContext(CSlangParser.ClassdeclContext,i)


        def getRuleIndex(self):
            return CSlangParser.RULE_program




    def program(self):

        localctx = CSlangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 130
                self.classdecl()
                self.state = 133 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==15):
                    break

            self.state = 135
            self.match(CSlangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(CSlangParser.CLASS, 0)

        def LCB(self):
            return self.getToken(CSlangParser.LCB, 0)

        def RCB(self):
            return self.getToken(CSlangParser.RCB, 0)

        def id_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSlangParser.Id_typeContext)
            else:
                return self.getTypedRuleContext(CSlangParser.Id_typeContext,i)


        def classbody(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSlangParser.ClassbodyContext)
            else:
                return self.getTypedRuleContext(CSlangParser.ClassbodyContext,i)


        def RARROW(self):
            return self.getToken(CSlangParser.RARROW, 0)

        def getRuleIndex(self):
            return CSlangParser.RULE_classdecl




    def classdecl(self):

        localctx = CSlangParser.ClassdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(CSlangParser.CLASS)
            self.state = 143
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 138
                self.id_type()
                pass

            elif la_ == 2:
                self.state = 139
                self.id_type()
                self.state = 140
                self.match(CSlangParser.RARROW)
                self.state = 141
                self.id_type()
                pass


            self.state = 145
            self.match(CSlangParser.LCB)
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 26624) != 0):
                self.state = 146
                self.classbody()
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 152
            self.match(CSlangParser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassbodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(CSlangParser.Var_declContext,0)


        def funct_declare(self):
            return self.getTypedRuleContext(CSlangParser.Funct_declareContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_classbody




    def classbody(self):

        localctx = CSlangParser.ClassbodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classbody)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13, 14]:
                self.state = 154
                self.var_decl()
                pass
            elif token in [11]:
                self.state = 155
                self.funct_declare()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(CSlangParser.SEMI, 0)

        def CONST(self):
            return self.getToken(CSlangParser.CONST, 0)

        def VAR(self):
            return self.getToken(CSlangParser.VAR, 0)

        def short_form(self):
            return self.getTypedRuleContext(CSlangParser.Short_formContext,0)


        def full_form(self):
            return self.getTypedRuleContext(CSlangParser.Full_formContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_var_decl




    def var_decl(self):

        localctx = CSlangParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            _la = self._input.LA(1)
            if not(_la==13 or _la==14):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 161
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 159
                self.short_form()
                pass

            elif la_ == 2:
                self.state = 160
                self.full_form()
                pass


            self.state = 163
            self.match(CSlangParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Short_formContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def short_identifier_list(self):
            return self.getTypedRuleContext(CSlangParser.Short_identifier_listContext,0)


        def COLON(self):
            return self.getToken(CSlangParser.COLON, 0)

        def whole_type(self):
            return self.getTypedRuleContext(CSlangParser.Whole_typeContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_short_form




    def short_form(self):

        localctx = CSlangParser.Short_formContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_short_form)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.short_identifier_list()
            self.state = 166
            self.match(CSlangParser.COLON)
            self.state = 167
            self.whole_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Short_identifier_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_type(self):
            return self.getTypedRuleContext(CSlangParser.Id_typeContext,0)


        def COMMA(self):
            return self.getToken(CSlangParser.COMMA, 0)

        def short_identifier_list(self):
            return self.getTypedRuleContext(CSlangParser.Short_identifier_listContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_short_identifier_list




    def short_identifier_list(self):

        localctx = CSlangParser.Short_identifier_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_short_identifier_list)
        try:
            self.state = 174
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 169
                self.id_type()
                self.state = 170
                self.match(CSlangParser.COMMA)
                self.state = 171
                self.short_identifier_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 173
                self.id_type()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Full_formContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_type(self):
            return self.getTypedRuleContext(CSlangParser.Id_typeContext,0)


        def identifier_list(self):
            return self.getTypedRuleContext(CSlangParser.Identifier_listContext,0)


        def expr(self):
            return self.getTypedRuleContext(CSlangParser.ExprContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_full_form




    def full_form(self):

        localctx = CSlangParser.Full_formContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_full_form)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self.id_type()
            self.state = 177
            self.identifier_list()
            self.state = 178
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Identifier_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CSlangParser.COMMA)
            else:
                return self.getToken(CSlangParser.COMMA, i)

        def id_type(self):
            return self.getTypedRuleContext(CSlangParser.Id_typeContext,0)


        def identifier_list(self):
            return self.getTypedRuleContext(CSlangParser.Identifier_listContext,0)


        def expr(self):
            return self.getTypedRuleContext(CSlangParser.ExprContext,0)


        def COLON(self):
            return self.getToken(CSlangParser.COLON, 0)

        def whole_type(self):
            return self.getTypedRuleContext(CSlangParser.Whole_typeContext,0)


        def EQUAL(self):
            return self.getToken(CSlangParser.EQUAL, 0)

        def getRuleIndex(self):
            return CSlangParser.RULE_identifier_list




    def identifier_list(self):

        localctx = CSlangParser.Identifier_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_identifier_list)
        try:
            self.state = 190
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [22]:
                self.enterOuterAlt(localctx, 1)
                self.state = 180
                self.match(CSlangParser.COMMA)
                self.state = 181
                self.id_type()
                self.state = 182
                self.identifier_list()
                self.state = 183
                self.expr()
                self.state = 184
                self.match(CSlangParser.COMMA)
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 2)
                self.state = 186
                self.match(CSlangParser.COLON)
                self.state = 187
                self.whole_type()
                self.state = 188
                self.match(CSlangParser.EQUAL)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expression_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(CSlangParser.ExprContext,0)


        def COMMA(self):
            return self.getToken(CSlangParser.COMMA, 0)

        def expression_list(self):
            return self.getTypedRuleContext(CSlangParser.Expression_listContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_expression_list




    def expression_list(self):

        localctx = CSlangParser.Expression_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_expression_list)
        try:
            self.state = 197
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 192
                self.expr()
                self.state = 193
                self.match(CSlangParser.COMMA)
                self.state = 194
                self.expression_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 196
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr0(self):
            return self.getTypedRuleContext(CSlangParser.Expr0Context,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_expr




    def expr(self):

        localctx = CSlangParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 199
            self.expr0()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr0Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr1(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSlangParser.Expr1Context)
            else:
                return self.getTypedRuleContext(CSlangParser.Expr1Context,i)


        def STRING_OP(self):
            return self.getToken(CSlangParser.STRING_OP, 0)

        def getRuleIndex(self):
            return CSlangParser.RULE_expr0




    def expr0(self):

        localctx = CSlangParser.Expr0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expr0)
        try:
            self.state = 206
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 201
                self.expr1()
                self.state = 202
                self.match(CSlangParser.STRING_OP)
                self.state = 203
                self.expr1()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 205
                self.expr1()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr2(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSlangParser.Expr2Context)
            else:
                return self.getTypedRuleContext(CSlangParser.Expr2Context,i)


        def compare_ops(self):
            return self.getTypedRuleContext(CSlangParser.Compare_opsContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_expr1




    def expr1(self):

        localctx = CSlangParser.Expr1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expr1)
        try:
            self.state = 213
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 208
                self.expr2(0)
                self.state = 209
                self.compare_ops()
                self.state = 210
                self.expr2(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 212
                self.expr2(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr3(self):
            return self.getTypedRuleContext(CSlangParser.Expr3Context,0)


        def expr2(self):
            return self.getTypedRuleContext(CSlangParser.Expr2Context,0)


        def AND_OP(self):
            return self.getToken(CSlangParser.AND_OP, 0)

        def OR_OP(self):
            return self.getToken(CSlangParser.OR_OP, 0)

        def getRuleIndex(self):
            return CSlangParser.RULE_expr2



    def expr2(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CSlangParser.Expr2Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 24
        self.enterRecursionRule(localctx, 24, self.RULE_expr2, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 216
            self.expr3(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 223
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = CSlangParser.Expr2Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr2)
                    self.state = 218
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 219
                    _la = self._input.LA(1)
                    if not(_la==37 or _la==38):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 220
                    self.expr3(0) 
                self.state = 225
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Expr3Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr4(self):
            return self.getTypedRuleContext(CSlangParser.Expr4Context,0)


        def expr3(self):
            return self.getTypedRuleContext(CSlangParser.Expr3Context,0)


        def ADD_OP(self):
            return self.getToken(CSlangParser.ADD_OP, 0)

        def SUB_OP(self):
            return self.getToken(CSlangParser.SUB_OP, 0)

        def getRuleIndex(self):
            return CSlangParser.RULE_expr3


